Fix Windows command line argument quoting in createJunction
Signed-off-by: Matt Sicker <boards@gmail.com>